<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/stop_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/endTracking"
        android:layout_margin="16dp"
        android:text="@string/endTracking"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopwatch"
        app:backgroundTint="@color/orange"/>
    <TextView
        android:id="@+id/travelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mapCard"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/travelName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/map_thumbnail" />

    </androidx.cardview.widget.CardView>

    <!-- Steps Section -->
    <androidx.cardview.widget.CardView
        android:id="@+id/statsCard"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/mapCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/stepsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/steps"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/distanceText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textAlignment="center"
                android:text="@string/_0"
                app:layout_constraintTop_toBottomOf="@+id/stepsText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/distanceText" />

        <!-- Distance Section -->
            <TextView
                android:id="@+id/distanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@id/stepsText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/stepsText"/>

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/_0_km"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/distanceText"
                app:layout_constraintLeft_toRightOf="@id/stepsText"
                app:layout_constraintRight_toRightOf="parent" />

        <!-- Speed Section -->
        <TextView
            android:id="@+id/speedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/speed"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/steps"
            app:layout_constraintLeft_toLeftOf="@id/stepsText"
            />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/_0_km_h"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/speedText"
            app:layout_constraintRight_toRightOf="@id/speedText"
            app:layout_constraintLeft_toLeftOf="@id/speedText"
            />

        <!-- Elevation Section -->
        <TextView
            android:id="@+id/elevationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elevation"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toTopOf="@id/speedText"
            app:layout_constraintRight_toRightOf="@id/distanceText" />

        <TextView
            android:id="@+id/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/_0_m"
            app:layout_constraintLeft_toLeftOf="@id/elevationText"
            app:layout_constraintRight_toRightOf="@id/elevationText"
            app:layout_constraintTop_toBottomOf="@id/elevationText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="50sp"
        android:text="@string/_00_00_00"
        app:layout_constraintTop_toBottomOf="@id/statsCard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>